infra/bbc-scraper.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: bbc-scraper
  name: bbc-scraper
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: bbc-scraper
    spec:
      containers:
        - image: bbc-scraper:1.0
          name: bbc-scraper
          ports:
            - containerPort: 11111
              name: status
