infra/cnn-scraper.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: cnn-scraper
  name: cnn-scraper
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: cnn-scraper
    spec:
      containers:
        - image: meventures/demo-cnn-scraper:1.1
          name: cnn-scraper
          ports:
            - containerPort: 11111
              name: status
