infra/data-store.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: data-store
  name: data-store
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: data-store
    spec:
      containers:
        - image: meventures/demo-data-store:1.1
          name: data-store
          ports:
            - containerPort: 11111
              name: status
