infra/id-service.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: id-service
  name: id-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: id-service
    spec:
      containers:
        - image: meventures/demo-id-service:1.1
          name: id-service
          ports:
            - containerPort: 11111
              name: status
