infra/slashdot-scraper.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: slashdot-scraper
  name: slashdot-scraper
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: slashdot-scraper
    spec:
      containers:
        - image: slashdot-scraper:1.1
          name: slashdot-scraper
          ports:
            - containerPort: 11111
              name: status
