infra/translation-service.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: translation-service
  name: translation-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: translation-service
    spec:
      containers:
        - image: meventures/demo-translation-service:1.1
          name: translation-service
          ports:
            - containerPort: 11111
              name: status
