infra/article-frontend.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: article-frontend
  name: article-frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: article-frontend
    spec:
      containers:
        - image: meventures/demo-article-frontend:1.2
          name: article-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: article-frontend
  labels:
    name: article-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    name: article-frontend
