infra/rabbitmq.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 labels:
   name: rabbitmq
 name: rabbitmq
spec:
 replicas: 1
 template:
   metadata:
     labels:
       name: rabbitmq
   spec:
     containers:
     - image: rabbitmq:3-management
       name: rabbitmq
       ports:
       - containerPort: 5672
         name: rabbitmq
       - containerPort: 15672
         name: rabbitmq-man
     - image: kbudde/rabbitmq-exporter
       name: rabbitmq-export
       ports:
       - containerPort: 9090
         name: rabbitmq-export
---
apiVersion: v1
kind: Service
metadata:
 name: rabbitmq-service
 labels:
   name: rabbitmq
spec:
 ports:
   - port: 5672
     targetPort: 5672
     protocol: TCP
     name: rabbitmq
   - port: 15672
     targetPort: 15672
     protocol: TCP
     name: management
   - port: 9090
     targetPort: 9090
     protocol: TCP
     name: metrics
 selector:
   name: rabbitmq
