infra/statsd-service.yml
apiVersion: v1
kind: Service
metadata:
 name: statsd-service
 labels:
   name: statsd-service
spec:
 ports:
   - port: 8125
     targetPort: 8125
     protocol: UDP
 selector:
   name: graphite-statsd
