infra/traefik.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik-ingress-controller
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
        version: v1.0.0
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v1.0.0
        name: traefik-ingress-lb
        resources:
          limits:
            cpu: 200m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: admin
          containerPort: 8080
        args:
        - --web
        - --kubernetes
---
apiVersion: v1
kind: Service
metadata:
 name: traefik-service
 labels:
   name: traefik-service
spec:
 type: LoadBalancer
 ports:
   - port: 80
     targetPort: 80
     protocol: TCP
 selector:
   name: traefik-ingress-lb
