infra/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
      traefik.frontend.rule.type: "PathPrefixStrip"
spec:
  rules:
  - host: articles.demo.com
    http:
      paths:
       - path: /api
         backend:
           serviceName: article-aggregate
           servicePort: 80
       - backend:
           serviceName: article-frontend
           servicePort: 80
